Fixed spacing with images, added num for Dylan

--- a/webpage/product.css
+++ b/webpage/product.css
@@ -2,6 +2,19 @@
   max-width: 960px;
 }
 
+.pad-up {
+  padding-top: 2cm;
+}
+
+
+.pad-down {
+  padding-bottom: 2cm;
+}
+
+.pad-down2 {
+  padding-bottom: 2.5cm;
+}
+
 .move{
 
   position: relative;
